fix navbar position issue on mobile view (#24)
* update team data alum

* update team.js

* update team page

* update officers section

* fix navbar height issue on mobile

* remove unnecessary files

* update officers section

* add new event

* fix navbar position issue on mobile

--- a/ncc/src/components/Navbar/Navbar.css
+++ b/ncc/src/components/Navbar/Navbar.css
@@ -241,6 +241,7 @@ a#logo4:hover>img {
 }
 
 
+
 .navBar,#navbar1{
     display: none;
 }
@@ -250,6 +251,7 @@ a#logo4:hover>img {
 #navbar1 {
     background: rgb(22, 25, 130);
     width: 100%;
+    height: 97px;
     height: 97px;
     padding: 1vh;
     align-items: center;
@@ -322,6 +324,7 @@ a#logo4:hover>img {
     font-weight: bolder;
     text-decoration: underline;
 }
+
 
 @keyframes slideIn {
     from {
@@ -404,6 +407,10 @@ a#logo4:hover>img {
     #navbar1 {
         height:76px;
     }
+
+    #Menu {
+        top: 76px;
+    }
 }
 
 @media (max-width: 760px) {
@@ -422,6 +429,10 @@ a#logo4:hover>img {
 
     #navbar1 {
         height: 97px;
+    }
+
+    #Menu {
+        top: 97px;
     }
 }
 
